DBX. fixing dark mode text issue

--- a/interface/src/componentsStyling/decrypt.scss
+++ b/interface/src/componentsStyling/decrypt.scss
@@ -20,11 +20,11 @@
                 &.read {
                     .message-left {
                         .message-heading {
-                            color: #19141F;
+                            color: t('text');
                             font-weight: 100;
                         }
                         .message-overflow {
-                            color: #19141F;
+                            color: t('text');
                             font-weight: 100;
                             width: 75%;
                         }
@@ -36,19 +36,19 @@
                 &.unread {
                     .message-left {
                         .message-heading {
-                            color: #285943;
+                            color: t('unreaded');
                             font-weight: 800;
                         }
                         .message-container {
                             position: relative;
                             .message-overflow {
-                                color: #285943;
+                                color: t('unreaded');
                                 font-weight: 800;
                                 width: 75%;
                             }
                             .new-message-icon {
                                 position: absolute;
-                                color: #285943;
+                                color: t('unreaded');
                                 right: 0;
                                 top: 0;
                             }
